--- a/src/components/forecast/workbench/forecast-workbench-forecast.css
+++ b/src/components/forecast/workbench/forecast-workbench-forecast.css
@@ -31,12 +31,8 @@
 
 .fcwf-companion {
   position: relative;
-  height: 200px;
+  height: 280px;
   padding: 4px 8px 8px;
-}
-
-.fcwf-companion-seasonality {
-  height: 230px;
 }
 
 .fcwf-companion-chart {
